--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -2,7 +2,7 @@
 <!-- edited with XMLSpy v2019 rel. 3 sp1 (x64) (http://www.altova.com) by Leyla Johnson (Private) -->
 <Root>
 	<!--Assets/GameAssets/Resources/Infos/improvement.xml-->
-	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in English-->
+	<!--NOTE: improvement names that are mass nouns or plural do not need multiple types in Translation-->
 	<Entry>
 		<zType/>
 		<Translation/>
@@ -29,7 +29,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_CULTURAL_PAGEANT</zType>
-		<English>Cultural Pageant</English>
+		<Translation>Cultural Pageant</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_CRUMBLING_ZIGGURAT</zType>
+		<Translation>The Ziggurat Crumbles</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_PURPLE_DYE</zType>
@@ -210,5 +214,49 @@
 	<Entry>
 		<zType>TEXT_PROJECT_STATUE_OF_DIONYSUS</zType>
 		<Translation>Statue of Dionysus</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_WAR</zType>
+		<Translation>Pagan Cult of War</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_FIRE</zType>
+		<Translation>Pagan Cult of Fire</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_WISDOM</zType>
+		<Translation>Pagan Cult of Wisdom</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_SUN</zType>
+		<Translation>Pagan Cult of the Sun</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_WATER</zType>
+		<Translation>Pagan Cult of the Seas</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_LOVE</zType>
+		<Translation>Pagan Cult of Love</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_UNDERWORLD</zType>
+		<Translation>Pagan Cult of Death</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_HEALING</zType>
+		<Translation>Pagan Cult of Healing</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_KINGSHIP</zType>
+		<Translation>Pagan Cult of Royalty</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_HEARTH</zType>
+		<Translation>Pagan Cult of the Hearth</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_PAGAN_CULT_HUNTING</zType>
+		<Translation>Pagan Cult of Hunting</Translation>
 	</Entry>
 </Root>
