--- a/Translations/German/text-mission-change.xml
+++ b/Translations/German/text-mission-change.xml
@@ -72,7 +72,7 @@
 	</Entry>
 	<Entry>	
 		<zType>TEXT_MISSION_PLAYER_TRUCE</zType>
-		<Translation>link(DIPLOMACY_TRUCE) mit Spieler</Translation>
+		<Translation>Spieler link(DIPLOMACY_TRUCE)</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSION_PLAYER_TRUCE_TARGET</zType>
